chore: 完成2A并修复JDK17下租户SQL兼容